tests/NormalTests/paczka1/fuzzy1/83162925.err
Error in line 2: zNSRDZm S691 16,5
Error in line 3: zNSRDZm A736 71,1
Error in line 6: sHSlZEYE A736 65,0
Error in line 5: zNSRDZm S691 58,8
